--- a/ahoy.css
+++ b/ahoy.css
@@ -415,7 +415,7 @@
   .home a.ahoy {
     position: static;
     padding: 0;
-    margin: 0;
+    margin: 1.4em 0 2.8em;
     color: inherit;
     text-align: center;
     display: block;
@@ -458,7 +458,7 @@
   }
   .banner:before {
     content: "";
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.75);
     position: absolute;
     top: 0;
     left: 0;
@@ -691,7 +691,7 @@
   .home .container:first-of-type h1:first-of-type {
     font-size: inherit;
     line-height: inherit;
-    margin: 0 5.6em 1.4em 0;
+    margin: 0 0 1.4em 0;
   }
   .home .container:first-of-type h2:first-of-type {
     font-size: 2em;
