--- a/ahoy.css
+++ b/ahoy.css
@@ -84,7 +84,7 @@
     background-size: 1.4em 1.4em;
     */
   }
-  @media (min-width: 40em) {
+  @media (min-width: 45em) {
     .banner + .container p:first-child {
       font-size: 1.2em;
       margin-bottom: 1.1666666667em;
@@ -133,7 +133,7 @@
     }
   }
   /*
-  @media (min-width: 40em) {
+  @media (min-width: 45em) {
     .container {
       padding-bottom: 5.6em;
     }
@@ -451,10 +451,25 @@
     display: block;
     position: relative;
     width: 100%;
-    padding-bottom: 80%;
-    padding-bottom: 80vh;
+    padding-bottom: 60%;
+    padding-bottom: 60vh;
     background-size: cover;
     background-position: center;
+  }
+  .home .banner {
+    padding-bottom: 40%;
+    padding-bottom: 40vh;
+  }
+  @media (min-aspect-ratio: 1/1) {
+    .home .banner,
+    .banner {
+      padding-bottom: 60%;
+      padding-bottom: 60vh;
+    }
+  }
+  a.banner:last-child {
+    padding-bottom: 50%;
+    padding-bottom: 50vh;
   }
   .banner:before {
     content: "";
@@ -509,16 +524,17 @@
 
   @media (min-width: 45em) {
     .banner div {
-      left: calc(50vw - 17.2em);
+      left: calc(50vw - 17.9em);
     }
   }
-  .home a.banner h3,
   .banner div h1 {
     margin-top: 0;
-    font-size: 1.75em;
-  }
-  .ahoy + .banner div h1 {
     font-size: 3em;
+  }
+
+  .home a.banner h3,
+  a.banner:last-child h1 {
+    font-size: 1.75em;
   }
 
   @media (min-width: 45em) {
@@ -579,7 +595,12 @@
     .container + .banner div h1 + p {
       margin-top: 0;
       padding: 0.35em 0.7em 0;
-      padding: 0.35em 1.4vmax 0; /* 4vmax * 0.35 */
+    }
+    @media (min-width: 45em) {
+      .home a.banner h3 + p,
+      .container + .banner div h1 + p {
+        padding: 0.35em 1.4vmax 0; /* 4vmax * 0.35 */
+      }
     }
   }
   a.banner {
@@ -605,16 +626,27 @@
     background-color: rgb(252, 252, 249); /* @snow */
     color: rgb(51, 51, 51);
   }
+  .home a.banner h3 {
+    margin-top: 0;
+  }
   .home a.banner h3,
   a.banner div:last-child h1 {
     text-transform: none;
     font-variant: normal;
   }
-  @media (min-width: 40em) {
+  @media (min-width: 45em) {
     .home a.banner h3,
     a.banner div:last-child h1 {
       font-size: 4vmax;
     }
+    /*
+    .home a.banner h3 {
+      font-size: 8vmax;
+    }
+    .home a.banner p {
+      font-size: 4vmax;
+    }
+    */
   }
   a.banner div:last-child {
     background-color: transparent;
@@ -632,18 +664,32 @@
   }
   */
   a.banner div:first-child {
-    top: 25%;
+    top: 10%;
+    bottom: auto;
   }
-  @media (min-width: 40em) {
-    a.banner div:first-child {
+  @media (min-width: 45em) {
+    .container + a.banner div:first-child {
       top: 25%;
     }
     a.banner div:last-child {
       top: 25%;
       bottom: auto;
       left: 50%;
-      left: calc(50vw - 2.2em);
+      left: calc(50vw - 2.9em);
     }
+    .home a.banner div:last-child {
+      left: 50%;
+      margin-left: -17.9em;
+    }
+    /*
+    .home a.banner div:last-child {
+      left: 50%;
+      width: 34.4em;
+      margin-left: -17.2em;
+      box-sizing: border-box;
+      text-align: center;
+    }
+    */
   }
   .home a.banner div:last-child {
     top: 50%;
@@ -654,6 +700,7 @@
   .container > div a {
     text-decoration: none;
     background-image: none;
+    color: rgb(40, 155, 215);
   }
   /*
   .container > div a:hover,
@@ -699,6 +746,45 @@
     margin-top: 0.5em;
     margin-bottom: 1em;
   }
+  .banner:before {
+    background: rgba(0, 0, 0, 0.375);
+  }
+  .banner div {
+    background-image: radial-gradient(rgba(0, 0, 0, 0.1875) 0%, rgba(0, 0, 0, 0) 65%, rgba(0, 0, 0, 0) 100%);
+  }
+  .banner h1,
+  .banner h2,
+  .banner h3,
+  .banner p {
+    text-shadow: 0 0 0.25em rgba(0, 0, 0, 0.375);
+  }
+  /*
+  .banner:before {
+    background: rgba(0, 0, 0, 0.25);
+  }
+  .banner h1,
+  .banner h2,
+  .banner h3,
+  .banner p,
+  a.banner div:last-child h1,
+  a.banner div:last-child h2,
+  a.banner div:last-child h3,
+  a.banner div:last-child p {
+    display: table;
+    background-color: white;
+    color: rgb(51, 51, 51);
+    text-shadow: none;
+  }
+  .banner h1,
+  .banner h2,
+  .banner h3,
+  a.banner div:last-child h1,
+  a.banner div:last-child h2,
+  a.banner div:last-child h3 {
+    background-color: rgb(40, 155, 215);
+    color: white;
+  }
+  */
   /*
   .home .container:first-of-type {
     margin: 0;
