--- a/ahoy.css
+++ b/ahoy.css
@@ -825,15 +825,30 @@
   .banner h2,
   .banner h3 {
     background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 100 25" xmlns="http://www.w3.org/2000/svg"><path fill="rgb(40, 155, 215)" d="M -10 0 Q 50 25, 110 0, L 110 35, -10 35 Z"></path></svg>') !important;
+    background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 100 25" xmlns="http://www.w3.org/2000/svg"><path fill="rgb(80, 195, 255)" d="M -10 0 Q 50 25, 110 0 L 110 10 Q 50 35, -10 10"></path></svg>') !important;
     background-repeat: repeat-x;
     background-position: bottom;
     background-size: 1em auto;
+  }
+  .banner h3:last-child {
+    padding-bottom: 1.05em !important;
+    background-position: 50% 65% !important;
   }
   .banner p {
     position: relative;
     margin-top: 0;
     top: -1px;
     background: rgb(40, 155, 215);
+  }
+  .banner p {
+    background-color: rgba(51, 51, 51, 0.85);  /* @snow */
+    color: white;
+  }
+  div.banner h1 {
+    background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 100 25" xmlns="http://www.w3.org/2000/svg"><path fill="rgba(252, 254, 249, 0.1)" d="M -10 0 Q 50 25, 110 0 L 110 10 Q 50 35, -10 10"></path></svg>') !important;
+  }
+  .container + a.banner div:first-child h2 {
+    background-image: none !important;
   }
 
   /*
