--- a/ahoy.css
+++ b/ahoy.css
@@ -372,17 +372,25 @@
       background-position: bottom;
       background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 100 50" xmlns="http://www.w3.org/2000/svg"><path fill="rgb(80, 195, 255)" d="M -10 0 Q 50 25, 110 0 L 110 55 L -10 55 Z"></path></svg>');
     }
+    .action a,
     .action a:hover,
     .action a:active,
     .action a:focus {
       background-color: rgb(40, 155, 215);
       color: white;
     }
+    .action a:hover,
+    .action a:active,
+    .action a:focus {
+      background-color: rgb(0, 115, 175);
+    }
 
   }
 
   .action li {
-    display: inline;
+    display: inline-block;
+    margin-right: 0.35em;
+    margin-bottom: 0.35em;
   }
 
 
