--- a/ahoy.css
+++ b/ahoy.css
@@ -3,8 +3,8 @@
   /* =Variables
   ----------------------------------------------- */
   :root {
-    --cloud-brightness: 245;
     --cloud-delay: 0s;
+    --sun-position: calc(-3 * 60 * 60s);
   }
 
 
@@ -292,16 +292,60 @@
     margin-left: 1.4em;
   }
   */
-  .sun circle,
-  .sun path {
+  .container > .sun {
+    position: absolute;
+    top: 0;
+    height: 6.125em;
+    width: calc(100vw - 2.8em);
+    max-width: 33em;
+    overflow: hidden;
+  }
+  .sun svg circle,
+  .sun svg path {
     fill: rgb(255, 235, 80);
   }
-  .sun {
+
+  @keyframes sun-path {
+    0% {
+
+      /* Sunrise */
+      left: 0;
+      bottom: -2em;
+    }
+    50% {
+
+      /* Noon */
+      left: calc(50% - 1.75em);
+      bottom: 4em;
+    }
+    100% {
+
+      /* Sunset */
+      left: calc(100% - 3.5em);
+      bottom: -2em;
+    }
+  }
+
+  .sun svg {
     width: 3.5em;
     height: 3.5em;
     position: absolute;
-    top: 1.4em;
-    margin-left: 0.7em;
+    /*
+    bottom: 0;
+    left: 0;
+    margin-left: -1.75em;
+    margin-bottom: -1.75em;
+    transform: translate(1.75em, 0.25em);
+    transform: translate(16.5em, -5.75em);
+    transform: translate(31.25em, 0.25em);
+    */
+    animation-name: sun-path;
+    animation-duration: calc(12 * 60 * 60s);
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-fill-mode: both;
+    animation-delay: calc(-3 * 60 * 60s);
+    animation-delay: var(--sun-position);
   }
 
   .cloud {
