Amend my last commit.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
 
       var sunPosition = ((hours - 6) % 12) * 60 * 60; // The animation only supports 0-12 hours, at present // Adjust by six hours, so the sun will be half-way through the animation (instead of at the very end) at noon.
 
-      sunPosition = 43200;
+      //sunPosition = 43200;
 
       //document.documentElement.style.setProperty('--cloud-brightness', brightness);
       //document.documentElement.style.setProperty('--cloud-position', position);
